--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -86,21 +86,105 @@ body {
   padding: 5px 20px;
   float: right;
   border-left: rgb(75, 75, 107) solid;
+  border-width: thick;
 }
 
 
 /* Work me Section*/
-.Work {
+.work {
     display:flex;
-    flex-wrap: wrap;
-    width: 100%;
-    justify-content: space-between;
-    flex-direction: column;
 }
 
+.work-header {
+  margin:8.2px;
+  display:flex;
+}
+
+.work h2 {
+  float: left;
+  margin: 20px 30px;
+  padding: 5px 5px;
+  text-align: right;
+  font-size: 40px;
+}
+
+.work img {
+  padding: 0px;
+  float: right;
+  justify-content: center;
+  width: 100%;
+  height: auto;
+}
+
+.App-1 {
+  border-left: rgb(75, 75, 107) solid;
+  border-width: thick;
+  padding: 5px 20px;
+  display: flex;
+}
+
+.app-section-layout img {
+  border: 3px solid lightskyblue; 
+  border-width: 6px;
+}
+
+.row {
+  display: flex;
+  border-left: 5px  rgb(75, 75, 107) solid;
+}
+
+.column {
+  flex: 33.33%;
+  padding: 5px;
+}
+
+
+
+  
 /*contact me Section*/
-.Contact-Me{
-    width: 100%;
-    flex-wrap: wrap;
-    display:flex;
+.Contact-Me {
+  display:flex;
+}
+
+.Contact-Me h2 { 
+  float: left;
+  margin: 20px 30px;
+  padding: 5px 5px;
+  text-align: right;
+  font-size: 40px;
+  color: rgb(75, 75, 107);
+}
+
+.contact-me-info { 
+  line-height: 35px;
+  font-size: 15px;
+  padding: 5px 20px;
+  float: right;
+  border-left: rgb(75, 75, 107) solid;
+  border-width: thick;
+}
+
+.contact-me-header {
+  display: flex;
+}
+
+.contact-me-info ul {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  align-items: center;
+  list-style: none;
+  margin: 0 20px;
+  padding: 5px 100px;
+  float: right;
+}
+
+.contact-me-info ul li {
+  display: flex;
+  padding: 10px 6px;
+  font-weight: bold;
+  text-decoration: none;
+  color:rgb(75, 75, 107);
+
+
 }
