--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -116,13 +116,9 @@ body {
   height: auto;
 }
 
-.App-1 {
-  border-left: rgb(75, 75, 107) solid;
-  border-width: thick;
-  padding: 5px 20px;
-  display: flex;
+app-section-layout {
+  margin: ;
 }
-
 .app-section-layout img {
   border: 3px solid lightskyblue; 
   border-width: 6px;
@@ -138,12 +134,15 @@ body {
   padding: 5px;
 }
 
-
-
-  
 /*contact me Section*/
 .Contact-Me {
-  display:flex;
+  display:inline-flex;
+}
+
+.Contact-Me a {
+  text-decoration: none;
+  border-bottom: rgb(75, 75, 107);
+  color: rgb(75, 75, 107);
 }
 
 .Contact-Me h2 { 
@@ -157,34 +156,18 @@ body {
 
 .contact-me-info { 
   line-height: 35px;
-  font-size: 15px;
+  font-size: 30px;
   padding: 5px 20px;
   float: right;
   border-left: rgb(75, 75, 107) solid;
   border-width: thick;
-}
-
-.contact-me-header {
-  display: flex;
-}
-
-.contact-me-info ul {
-  display: flex;
+  overflow: hidden;
+  display:flex;
   flex-wrap: wrap;
-  justify-content: space-between;
-  align-items: center;
-  list-style: none;
-  margin: 0 20px;
-  padding: 5px 100px;
-  float: right;
 }
 
-.contact-me-info ul li {
-  display: flex;
-  padding: 10px 6px;
-  font-weight: bold;
-  text-decoration: none;
-  color:rgb(75, 75, 107);
-
-
+.a-elements {
+  padding: 5px;
+  margin: 14px;
+  border-bottom: 4px rgb(75, 75, 107) solid;
 }
